2010-06-21  Evan Martin  <evan@chromium.org>

        Reviewed by Adam Barth.

        [chromium] overlapping characters in complex text
        https://bugs.webkit.org/show_bug.cgi?id=40966

        New baselines, now that bug is fixed (e.g. the /M at the end was previously overlapping).

        * platform/chromium-linux/fast/text/international/thai-baht-space-expected.checksum:
        * platform/chromium-linux/fast/text/international/thai-baht-space-expected.png:
        * platform/chromium-linux/fast/text/atsui-spacing-features-expected.checksum:
        * platform/chromium-linux/fast/text/atsui-spacing-features-expected.png:

2010-06-23  Peter Kasting  <pkasting@google.com>

        Reviewed by Adam Barth.

        REGRESSION (r61619): Memory corruption in open-source ICO decoder
        https://bugs.webkit.org/show_bug.cgi?id=41107
        
        This doesn't contain the updated test results -- I'll get that off the
        bots after checkin.

        * fast/images/icon-decoding.html: Add test for memory corruption while decoding broken .ico.
        * fast/images/resources/bad.ico: Added.

2010-06-24  Martin Robinson  <mrobinson@igalia.com>

        Unreviewed.

        Updated expected results for a test that differs on the bots.

        * platform/gtk/scrollbars/overflow-scrollbar-combinations-expected.txt:

2010-06-24  Martin Robinson  <mrobinson@igalia.com>

        Unreviewed.

        Skip a failing test. Clean up skipped list stragglers. Conglomerate all tests which
        are timing out and don't have attached bugs. Add expected results for some tests and
        unskip them.

        * platform/gtk/Skipped: Clean up skipped list stragglers.
        * platform/gtk/animations/3d/change-transform-in-end-event-expected.txt: Added.
        * platform/gtk/animations/3d/state-at-end-event-transform-expected.txt: Added.
        * platform/gtk/animations/state-at-end-event-expected.txt: Added.