@@ -1,3 +1,12 @@
+2010-06-24  Peter Kasting  <pkasting@google.com>
+
+        Not reviewed.
+
+        Fix earlier test change so it actually tests anything.
+        https://bugs.webkit.org/show_bug.cgi?id=41107
+
+        * fast/images/icon-decoding.html:
+
 2010-06-21  Evan Martin  <evan@chromium.org>
 
         Reviewed by Adam Barth.
